vcluster_versioned_docs/version-0.37.0/production-guide/distributed-compute.mdx
---
title: Distributed Compute Aggregation
sidebar_label: Distributed Compute
sidebar_position: 5
description: Unify GPU compute from multiple sources under one management plane. Day 0, Day 1, and Day 2 path for compute aggregators.
---

One management plane for GPU compute from every source you own or contract. Whether that is a cloud region, a co-located data center, or a compute supplier, each site runs a Standalone <GlossaryTerm term="control-plane-cluster">control plane cluster</GlossaryTerm>. Your central Platform instance sees the full fleet.

**Customer access model:** Each tenant gets an isolated cluster on dedicated GPU nodes, regardless of which compute source backs it. **Worker-node model:** Private nodes per <GlossaryTerm term="tenant-cluster">tenant cluster</GlossaryTerm> at every site.

**Typical stack:** Central Platform (global). Per-DC Standalone control plane cluster. Private GPU nodes co-located with each Standalone instance. vMetal for owned bare metal sites.

<figure>
  <img
    style={{ display: "block", margin: "0 auto", maxWidth: "100%" }}
    src="/docs/img/production-paths/distributed-compute.png"
    alt="Compute aggregation architecture: central control plane with tenant clusters scheduling work onto distributed capacity sources"
  />
  <figcaption>Central control plane managing tenant workloads across distributed compute capacity sources</figcaption>
</figure>

**What makes this path different:** Every compute source, regardless of where it lives or who operates it, follows the same onboarding playbook. One ops team, one management plane, no per-provider tooling. This architecture also maps to the cluster-level isolation criteria that AI cloud buyers evaluate in frameworks like [ClusterMAX](https://www.vcluster.com/clustermax).

## Day 0: Design decisions

| Decision | Read next | Outcome |
| --- | --- | --- |
| Design the central-regional topology | [Multi-region Platform](/docs/platform/administer/clusters/advanced/multi-region/overview), [Standalone deployment](../deploy/control-plane/binary/basics.mdx) | Central Platform registers each DC's Standalone instance as a connected cluster. Tenant control planes run co-located with their GPU nodes at each site. |
| Define the supplier onboarding playbook | [Standalone HA](../deploy/control-plane/binary/high-availability.mdx), [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [Auto Nodes](/docs/platform/administer/node-providers/overview) | Standardize the steps to register a new compute source: install Standalone, connect to central Platform, join GPU inventory, validate. |
| Plan networking between sites | [VPN](../deploy/worker-nodes/private-nodes/vpn.mdx) | Each site's tenant clusters connect to their private nodes over VPN. Define whether tenants can span sites or are bound to a single DC. |
| Define the default network policy posture | [Network policy](../configure/vcluster-yaml/policies/network-policy.mdx) | Set a default-deny east-west posture per tenant template at every site and confirm each site's CNI enforces it. Some CNIs accept NetworkPolicy objects without enforcing them. |
| Define tenant isolation at each site | [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [vNode docs](https://www.vnode.com/docs/) | Each tenant cluster at a site gets its own dedicated GPU nodes. vNode adds runtime isolation for untrusted workloads. |
| Choose the GPU scheduling model | [DeviceClasses](../configure/vcluster-yaml/sync/from-host/device-classes.mdx), [DRA ResourceClaims](../configure/vcluster-yaml/sync/to-host/DRA/resourceclaims.mdx) | Device-plugin-style `DeviceClass` sync covers simple, whole-GPU allocation. DRA `ResourceClaim` sync (Pro) supports fine-grained and shared GPU allocation, consistently across every compute source. |
| Standardize tenant GPU software | [Stacks](/docs/platform/next/understand/what-are-stacks), [create a Stack template](/docs/platform/next/administer/templates/create-stack-templates) | If you manage tenant software, define one ordered application baseline that can be deployed consistently across compute sources. |
| Plan tenant storage per site | [Storage classes from host](../configure/vcluster-yaml/sync/from-host/storage-classes.mdx), [CSI storage capacities](../configure/vcluster-yaml/sync/from-host/csi-storage-capacities.mdx) | Decide which storage classes are available at each site, since local NVMe or shared storage availability can differ by compute source, and whether to sync host `CSIStorageCapacity` for scheduler-aware placement. |
| Plan security hardening and audit logging | [Security baseline](../security/README.mdx), [CIS hardening guide](../deploy/control-plane/kubernetes-pod/security/hardening-guide/overview.mdx), [Platform audit logging](/docs/platform/configure/platform-configs/audit) | Apply a consistent CIS benchmark baseline across every site's control plane cluster and decide audit log retention and SIEM integration before onboarding tenants. |

## Day 1: Stand up the first compute source

1. Deploy [vCluster Platform](/docs/platform/install/quick-start-guide) in the central region. Configure [Platform HA](/docs/platform/maintenance/reliability-scaling/high-availability) and [backup](/docs/platform/maintenance/backup-restore/backup-restore-platform).
2. At the first compute site, install [vCluster Standalone](../deploy/control-plane/binary/basics.mdx) and move to [HA](../deploy/control-plane/binary/high-availability.mdx).
3. Register the site's Standalone control plane cluster with central Platform.
4. Join the site's GPU inventory as private nodes. Configure [Auto Nodes](/docs/platform/administer/node-providers/overview) or [vMetal](https://www.vmetal.ai/docs/) for automated provisioning and reclaim.
5. Configure [templates](/docs/platform/administer/templates/overview) and [quotas](/docs/platform/administer/projects/quotas) in central Platform for this compute source.
6. Apply a default-deny [network policy](../configure/vcluster-yaml/policies/network-policy.mdx) in the site's template and confirm the site's CNI enforces it.
7. Configure per-site [storage classes](../configure/vcluster-yaml/sync/from-host/storage-classes.mdx) for the template.
8. Configure GPU scheduling: sync [DeviceClasses](../configure/vcluster-yaml/sync/from-host/device-classes.mdx) for device-plugin allocation, or enable [DRA ResourceClaim sync](../configure/vcluster-yaml/sync/to-host/DRA/resourceclaims.mdx) for fine-grained allocation.
9. If you manage the tenant software layer, [create a StackTemplate](/docs/platform/next/administer/templates/create-stack-templates) for the GPU applications that should be consistent across sites, then [deploy it to the tenant environments](/docs/platform/next/use-platform/apps/use-stacks#choose-how-to-install-a-stack).
10. Apply the [CIS hardening baseline](../deploy/control-plane/kubernetes-pod/security/hardening-guide/overview.mdx) to the site's control plane cluster and enable [Platform audit logging](/docs/platform/configure/platform-configs/audit).
11. Provision a test tenant cluster at the site. Validate that it appears in central Platform and that workloads land on the correct GPU nodes.
12. Document the supplier onboarding playbook. Repeat steps 2-11 for each additional compute source.

## Day 2: Operate

| Operation | Read next |
| --- | --- |
| Monitor the distributed fleet | [Fleet Observability](/docs/platform/maintenance/observability/overview), [other architectures](/docs/platform/next/maintenance/monitoring/fleet-metrics-architectures) |
| Onboard a new compute source | Supplier onboarding playbook (internal), [Standalone deployment](../deploy/control-plane/binary/basics.mdx) |
| Upgrade across sites | [Upgrade vCluster](../manage/upgrade/upgrade-version.mdx), [upgrade Platform](/docs/platform/maintenance/upgrade-migrate/upgrade) |
| Handle site failures | [Platform HA](/docs/platform/maintenance/reliability-scaling/high-availability), [multi-region Platform](/docs/platform/administer/clusters/advanced/multi-region/overview) |
| Track GPU utilization and faults across sites | [GPU observability templates](/docs/platform/maintenance/observability/gpu-observability-templates), [NVSentinel GPU observability](/docs/platform/maintenance/observability/nvsentinel-gpu-observability) |
| Review audit logs and security posture across the fleet | [Platform audit logging](/docs/platform/configure/platform-configs/audit), [security baseline](../security/README.mdx) |
